# Travel_Planner_Crew

./: .gitignore  README.md  output.md  pyproject.toml
logs/: execution.log.txt  quota_usage.json
src/bot/: crew.py  main.py
src/bot/config/: agents.yaml  tasks.yaml
src/bot/tools/: __init__.py  custom_tool.py
